# CUDA_ROPE

./: .gitignore  CMakeLists.txt  README.md  autotune_kernel0.sh  plot_performance.sh  run.sh  run_visualization.sh
docs/: 线程调度三层关系总结.txt
docs/algorithm/: ROPE_principle.txt  complex_vector_math.txt  float_binary_representation.txt  kernel0_autotune_analysis.txt  kernel0_vs_kernel1.txt  kernel2_vs_kernel0.txt  kernel_performance_analysis.txt  linear_algebra_core_concepts.txt  qkv_input_layout_ragged_vs_padded.txt  quantization_vs_mixed_precision.txt
docs/algorithm/fused_ROPE_RMSNorm/: ROPE_principle.txt  block_size_x_autotune_insensitivity.txt  qknorm&rope.txt  rmsnorm_vs_layernorm.txt
docs/algorithm/vllm/architecture/: _C扩展的Python调用过程.txt  vllm自定义算子调用链路.txt  算子入图(直接调用)_vs_融合替换_及fake写在哪.txt
docs/c++/: AT_DISPATCH_FLOATING_TYPES_AND2.txt  at_tensor_vs_stable_tensor_registration.txt  builtin_expect.txt  class_and_function_templates.txt  compiler_warning_flags.txt  constant_folding.txt  constexpr_consteval_constinit_const.txt  constexpr_function_and_if_constexpr.txt  enum_vs_enum_class.txt  function_variadic.txt  generic_lambda.txt  how_to_trace_libtorch_macro.txt  linkage.txt  macro.txt  namespace_lookup.txt  noreturn_and_reachability_analysis.txt  pointer_kinds.txt  rvalue_ref_and_forwarding_ref.txt  scalartype_to_cpptype.txt  static_cast_and_reinterpret_cast.txt  static_vs_dynamic_polymorphism.txt  std_forward.txt  struct_and_class.txt  switch_case_fallthrough_and_warnings.txt  template_disambiguator.txt  template_scope_alias_and_deduction.txt  template_scope_and_using_alias.txt  torch_check_macro_analysis.txt  torch_library_linking.txt  type_conversion.txt  unnamed_param_and_maybe_unused.txt  x_macro_scalartype_enum.txt
docs/cmake/: debug_aoti_torch_undefined.txt
docs/compile/: build_pipeline_and_cli.txt
docs/cuda/: cuda_arch_and_use_rocm_macros.txt  device_pointer_vs_device_symbol.txt  gpu_hardware_constraints.txt  l1_constant_readonly_cache.txt  nvcc_host_device_compile_model.txt  nvidia_cli_arch_sm_and_features.txt  shfl_xor_sync.txt
docs/fork/: fused_silu_mul_compile_hook.py  fused_silu_mul_compile_hook.txt
docs/python/: FakeTensor.txt  module_class_same_name_and_imports.txt  python解包_星号与双星号.txt  search_fn_replace_fn_pattern_matching.txt  torch.PatternMatcherPass_register_replacement.txt  torch.library.register_fake.txt  torch.load_inline.txt
docs/python/torch/: TORCH_LIBRARY_vs_PYBIND11.txt  cat_stack_gather_scatter.txt  custom_op_inplace_autofunctionalized.txt  search_fn_replace_fn_pattern_matching.txt  torch.PatternMatcherPass_register_replacement.txt  torch.library.register_fake.txt  torch_compile流水线.txt  torch_op_hbm_data_movement.txt
src/: dispatch.h  error_check.cuh  interface.cpp  kernels.cuh  run_kernel.cu  runner.cu  runner.cuh  typeConvert.cuh  validation.cu  validation.h
src/app/: __init__.py  model.py  rmsnorm_rope_replace_pass.py  runner.py  util.py
src/app/config/: config.yaml
src/kernels/: 0_ROPE_kernel_base.cuh  1_ROPE_kernel_base.cuh  1_ROPE_kernel_naive.cuh  2_ROPE_kernel_vectorize.cuh  3_fuesd_QKNorm_and_ROPE_kernel.cuh  common.cuh  compact.cuh  typeConvert.cuh
src/python_app/: __init__.py  installer.py  model.py  rmsnorm_rope_replace_pass.py  runner.py  util.py
src/python_app/config/: config.yaml
src/script/: visualize_rope_rotation.py
src/scripts/: plot_performance.py  visualize_rope_rotation.py
src/scripts/fused_ROPE_RMSNorm/: autotune_block_size_x.sh  autotune_kernel0.sh  benchmark_fused_qknorm_rope.py  plot_op_benchmark.py  plot_performance.py  plot_performance.sh  run.sh  run_benchmark_op.sh  run_check_op.sh  run_plot_op.sh  run_visualization.sh  test_fused_qknorm_rope.py
